# monospheres

./: README.md
dependencies/vins_republish/: CMakeLists.txt  package.xml  plugins.xml
dependencies/vins_republish/launch/: vins_republisher_openvins_bluefox.launch
dependencies/vins_republish/src/: VinsRepublisher.cpp
monospheres/: .gitignore  CMakeLists.txt  cranes.sdf  create_python_env.sh  package.xml  requirements.txt  setup.py  uav.rviz
monospheres/config/: hardnav.yaml  mrs_real.yaml  mrs_sim.yaml  tello.yaml
monospheres/launch/: mapplan.launch  mrs_openvins_explore.launch  mrs_openvins_explore_real.launch  nav_hardnav.launch  nav_tello.launch  random_octomap_explorer.launch  rviz.launch
monospheres/meshes/: inspection_water.dae
monospheres/rviz/: mrs_sim.rviz  uav25.rviz  uav25_aaa.rviz  uav25_mins.rviz  uav25_namespaced.rviz
monospheres/scripts/: cave_start_maneuver.sh  customWaitForControl.py  draw_exploration_progress_graph.py  goforward2m.sh  goforward5m.sh  ov_extension.py  pointcloud_transformer.py  process_runtimes_from_bag.py  process_volume_and_goals_from_markers.py  random_octomap_explorer.py
monospheres/src/monospheres/: common_spatial.py  fire_slam_module.py  (+3 more)
monospheres/tmux_scripts/: bag_img_decompress.sh  img_decompress.sh  record_exploration_and_camera.sh  record_exploration_explain.sh  record_only_exploration.sh
monospheres/urdf/: inspection_geometry.urdf.xacro
monospheres/worlds/: fireworld1.sdf  houseworld.sdf  lushcave_morelights.sdf  sparse1.world  suburb.world  suburb2.world  suburb3.world  towers.sdf
(+33 files in other folders)
